# Cuvette

./: .gitignore  CMakeLists.txt  main.cpp  randomSource.root  script.sh  test.mac
include/: BIActionInitialization.hpp  BICommonHit.hpp  BICommonSD.hpp  BIDNAPhysicsList.hpp  BIDetectorConstruction.hpp  BIEventAction.hpp  BIPhysicsList.hpp  BIPrimaryGeneratorAction.hpp  BIRunAction.hpp  BISmallHit.hpp  BISmallSD.hpp
src/: BIActionInitialization.cpp  BICommonHit.cpp  BICommonSD.cpp  BIDetectorConstruction.cpp  BIEventAction.cpp  BIPhysicsList.cpp  BIPrimaryGeneratorAction.cpp  BIRunAction.cpp  BISmallHit.cpp  BISmallSD.cpp
